--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -6,42 +6,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
     <title>{{ title }}</title>
-
-    <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
-
-    <!-- Bootstrap -->
     <link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
-
-    <!-- Slick -->
     <link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'css/slick-theme.css' %}"/>
-
-    <!-- nouislider -->
     <link type="text/css" rel="stylesheet" href="{% static 'css/nouislider.min.css' %}"/>
-
-    <!-- Font Awesome Icon -->
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-
-    <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-
-    <![endif]-->
-
 </head>
 <body>
-<!-- HEADER -->
 <header>
-    <!-- TOP HEADER -->
     <div id="top-header">
         <div class="container">
             <ul class="header-links pull-left">
@@ -76,15 +54,9 @@
             </ul>
         </div>
     </div>
-    <!-- /TOP HEADER -->
-
-    <!-- MAIN HEADER -->
     <div id="header">
-        <!-- container -->
         <div class="container">
-            <!-- row -->
             <div class="row">
-                <!-- LOGO -->
                 <div class="col-md-3">
                     <div class="header-logo">
                         <a href="{% url 'index' %}" class="logo">
@@ -92,20 +64,14 @@
                         </a>
                     </div>
                 </div>
-                <!-- /LOGO -->
-
-                <!-- SEARCH BAR -->
                 <div class="col-md-6">
                     <div class="header-search">
-                        <form action="#" method="get" id="form1" name="theForm">
+                        <form action="{% url 'products:search' %}" method="get" id="form1" name="theForm">
                             <input class="input1" placeholder="Введите запрос" name="Search">
                             <button class="search-btn">Искать</button>
                         </form>
                     </div>
                 </div>
-                <!-- /SEARCH BAR -->
-
-                <!-- ACCOUNT -->
                 <div class="col-md-3 clearfix">
                     <div class="header-ctn">
                         <div class="dropdown">
@@ -113,11 +79,9 @@
                                 <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
                                     <i class="fa fa-shopping-cart"></i>
                                     <span>Корзина</span>
-
                                     <div class="qty">{{ baskets.total_quantity }}</div>
                                 </a>
                                 {% if baskets %}
-
                                     <div class="cart-dropdown">
                                         {% for basket in baskets %}
                                             <div class="cart-list">
@@ -161,7 +125,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                 {% endif %}
                             {% else %}
                                 <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
@@ -170,7 +133,6 @@
                                 </a>
                                 <div class="cart-dropdown">
                                     <div class="cart-list">
-
                                         <div class="product-widget">
                                             <div class="product-body1">
                                                 <h5 class="product-name"><a href="{% url 'users:registration' %}">Зарегестрируйтесь
@@ -180,72 +142,46 @@
                                     </div>
                                 </div>
                             {% endif %}
-                        <!-- /Cart -->
-
-                        <!-- Menu Toogle -->
-                        <!-- /Menu Toogle -->
                     </div>
                 </div>
-                <!-- /ACCOUNT -->
             </div>
-            <!-- row -->
         </div>
-        <!-- container -->
     </div>
-    <!-- /MAIN HEADER -->
 </header>
-<!-- /HEADER -->
-
-<!-- NAVIGATION -->
 <nav id="navigation">
-    <!-- container -->
     <div class="container">
-        <!-- responsive-nav -->
         <div id="responsive-nav">
-            <!-- NAV -->
             <ul class="main-nav nav navbar-nav">
                 <li><a href="{% url 'index' %}">На главную</a></li>
                 <li><a href="{% url 'products:categories' %}">Категории</a></li>
             </ul>
-            <!-- /NAV -->
         </div>
-        <!-- /responsive-nav -->
     </div>
-    <!-- /container -->
 </nav>
-<!-- /NAVIGATION -->
+
 {% block content %}    {% endblock %}
 
 <footer id="footer">
-    <!-- bottom footer -->
     <div id="bottom-footer" class="section">
         <div class="container">
-            <!-- row -->
             <div class="row">
                 <div class="col-md-12 text-center">
 							<span class="copyright">
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</span>
                 </div>
             </div>
-            <!-- /row -->
         </div>
-        <!-- /container -->
     </div>
-    <!-- /bottom footer -->
 </footer>
-<!-- /FOOTER -->
 
-<!-- jQuery Plugins -->
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/slick.min.js' %}"></script>
 <script src="{% static 'js/nouislider.min.js' %}"></script>
 <script src="{% static 'js/jquery.zoom.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
-
+<script src="{% static 'js/localstorage.js' %}"></script>
 
 <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
 <script src="{% static 'js/infinite.min.js' %}"></script>
