--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -3,11 +3,8 @@
 {% block content %}
     <title>{{ product.name }}</title>
     <div class="section">
-        <!-- container -->
         <div class="container">
-            <!-- row -->
             <div class="row">
-                <!-- Product main img -->
                 <div class="col-md-5 col-md-push-2">
                     <div id="product-main-img">
                         <div class="product-preview">
@@ -19,35 +16,25 @@
                         <div class="product-preview">
                             <img src="{{ product.image3 }}" alt="">
                         </div>
-
                     </div>
                 </div>
-                <!-- /Product main img -->
-
-                <!-- Product thumb imgs -->
                 <div class="col-md-2  col-md-pull-5">
                     <div id="product-imgs">
                         <div class="product-preview">
                             <img src="{{ product.image1 }}" alt="">
                         </div>
-
                         <div class="product-preview">
                             <img src="{{ product.image2 }}" alt="">
                         </div>
-
                         <div class="product-preview">
                             <img src="{{ product.image3 }}" alt="">
                         </div>
                     </div>
                 </div>
-                <!-- /Product thumb imgs -->
-
-                <!-- Product details -->
                 <div class="col-md-5">
                     <div class="product-details">
                         <h2 class="product-name">{{ product.name }}</h2>
                         <div>
-
                         </div>
                         <div>
                             {% if product.price_now %}
@@ -82,7 +69,6 @@
                                             {% for color in colors %}
                                                 <option value="{{ color }}" name="Color">{{ color }}</option>
                                             {% endfor %}
-
                                         </select>
                                     </div>
                                 {% endif %}
@@ -98,49 +84,34 @@
                                     <i class="fa fa-shopping-cart"></i>Добавить
                                 </button>
                             </div>
-
                             <ul class="product-links">
                                 <li>Категория:</li>
                                 <li>
-                                    <a href="{% url 'products:index' product.category.id %}">{{ product.category }}</a>
+                                    <a href="{% url 'products:index' product.category.id %}?order=discount">{{ product.category }}</a>
                                 </li>
-
                             </ul>
                         </form>
                     </div>
                 </div>
-                <!-- /Product details -->
-
-                <!-- Product tab -->
                 <div class="col-md-12">
                     <div id="product-tab">
-                        <!-- product tab nav -->
                         <ul class="tab-nav">
                             <a name="top"></a>
                             <li class="active"><a data-toggle="tab" href="#">Описание</a></li>
                         </ul>
-                        <!-- /product tab nav -->
-
-                        <!-- product tab content -->
                         <div class="row">
                             <div class="col-md-12">
                                 {% if product.description %}
                                     <p>{{ product.description }}</p>
                                 {% endif %}
-
                                 {% for specification in specifications %}
                                     <p>{{ specification }}</p>
                                 {% endfor %}
-
-
                             </div>
                         </div>
-
-                        <!-- /tab1  -->
                         <ul class="tab-nav">
                             <li><a data-toggle="tab" href="#">Отзывы</a></li>
                         </ul>
-                        <!-- tab3  -->
                         <div class="row">
                             <div class="col-md-3">
                                 <div id="rating">
@@ -149,9 +120,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- /Rating -->
-
-                            <!-- Reviews -->
                             <div class="col-md-6">
                                 <div id="reviews">
                                     <ul class="reviews">
@@ -176,8 +144,6 @@
                                     </ul>
                                 </div>
                             </div>
-                            <!-- /Reviews -->
-                            <!-- Review Form -->
                             <div class="col-md-3">
                                 <div id="review-form">
                                     <form class="review-form" action="{% url 'products:review_add'  product.id %}"
@@ -198,19 +164,12 @@
                                                 <strong>войти</strong></a>
                                         {% endif %}
                                     </form>
-
                                 </div>
                             </div>
-                            <!-- /Review Form -->
                         </div>
-
-                        <!-- /tab3  -->
                     </div>
-                    <!-- /product tab content  -->
                 </div>
             </div>
-            <!-- /product tab -->
         </div>
-        <!-- /row -->
     </div>
 {% endblock %}
